Remove DCHECK in QueryContainsComponentHelper

page_load_metrics::IsGoogleSearchResultUrl() can, if given a URL where
the query identifier is after the fragment identifier (e.g.,
https://www.google.com/webmasters/#?modal_active=none), cause a DCHECK
to fail in QueryContainsComponentHelper.

This adds a unit test which triggers the DCHECK failure. It also removes
the DCHECK in favor of relying on GURL to conform to the URL spec and
have proper unit tests.

Change-Id: Ibdc5d6d0aee2089deea2c777d94c0dd70ef1ffd0
Bug: 805155