chrome/browser/page_load_metrics/page_load_metrics_util_unittest.cc
@@ -124,6 +124,8 @@ TEST_F(PageLoadMetricsUtilTest, IsGoogleSearchResultUrl) {
       {false, "http://www.example.com/"},
       {false, "https://www.example.com/webhp?q=test"},
       {false, "https://google.com/#q=test"},
+      // Regression test for crbug.com/805155
+      {false, "https://www.google.com/webmasters/#?modal_active=none"},
   };
   for (const auto& test : test_cases) {
     EXPECT_EQ(test.expected_result,
